--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
 
     window.onerror = function(error) {
       console.log("Catched error using window.onerror", error);
-      console.log()
-    }
+    };
 
 
     
@@ -238,6 +237,8 @@
       token: "ece7fd977d0d4b0c90a298a1805a4fef"
       // for more configuration options, see https://docs.trackjs.com
     });
+
+    TrackJS.track('Testing TrackJS!');
   </script>
 </body>
 
